Settings: List blocked protocols on chrome://settings/handlers

Blocked protocols were not be listed on chrome://settings/handlers. Adding a "Blocked" section which listed all the ignored handlers and allows removal through a menu.

R=dpapad@chromium.org, scottchen@chromium.org

Bug: 744717
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I0cddc0bf60dcf405ae42224e16d4de199728025a
Reviewed-on: https://chromium-review.googlesource.com/911809
Reviewed-by: Matt Giuca <mgiuca@chromium.org>
Reviewed-by: Scott Chen <scottchen@chromium.org>
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Commit-Queue: Esmael El-Moslimany <aee@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538344}
Former-commit-id: 1567ada96f7f3117a218f75ce5a6b7a342f23cfa